fix width on small devices

--- a/style.css
+++ b/style.css
@@ -1,14 +1,8 @@
-body { font-family: monospace; display: flex; }
+html{background-color:#111 !important; color:#888 !important;margin: 0; height: 100%;}
+body{width:100%;margin-top:0px;margin-left:auto;margin-right:auto; font-size: 1em; font-family: monospace; display: flex;}
 nav { margin-right: 2em; padding-top: 1em; }
 ul { margin: 0; padding-left: 1em; }
 ul.spaced-list > li { margin-bottom: 1ex; }
 hr { border: 1px solid red; margin: 2ex 0; }
- a { color:#2ECC40; text-decoration: none; }
+a { color:#2ECC40; text-decoration: none; }
 a:hover { text-decoration: underline; }
-
-html{background-color:#111 !important; color:#888 !important;}
-/* body{width:100%;margin-top:0px;margin-left:auto;margin-right:auto; font-family: "Verdana", sans-serif; font-size: 1em;} */
-/* header{margin:10px} */
-/* li{margin-left:10px;} */
-/* h2 a,h3{color: #357edd !important;} */
-/* h2,h3,ul{margin:0px;padding:0px;} */
